--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,71 @@
 {
   "root": true,
+  "env": {
+    "browser": true,
+    "node": true,
+    "es2021": true
+  },
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "eslint:recommended",
+    "plugin:jsx-a11y/recommended",
+    "plugin:import/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings"
+  ],
+  "plugins": [
+    "react",
+    "@typescript-eslint",
+    "react-hooks",
+    "jsx-a11y",
+    "import"
+  ],
+  "settings": {
+    "import/resolver": {
+        "node": {
+            "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        }
+    }
+},
+"rules": {
+  "react-hooks/rules-of-hooks": "warn",
+  "react-hooks/exhaustive-deps": "warn",
+   "@typescript-eslint/consistent-type-imports": ["warn", {"prefer": "type-imports"}],
+  "@typescript-eslint/ban-ts-comment":  "off",
+  "indent": ["error", "tab"],
+  "quotes": ["error", "double"],
+  "semi": "warn",
+  "no-console": "error",
+  "no-multi-spaces": "warn",
+  "no-mixed-spaces-and-tabs": "off",
+  "@typescript-eslint/no-non-null-assertion": "off",
+  "jsx-a11y/click-events-have-key-events": "off",
+  "jsx-a11y/no-noninteractive-tabindex": "off",
+  "jsx-a11y/no-static-element-interactions": "off",
+  "import/order": [
+      "warn",
+      {
+          "groups": [
+              "index",
+              "sibling",
+              "parent",
+              "internal",
+              "external",
+              "builtin",
+              "object",
+              "type"
+          ],
+          "newlines-between": "always"
+      }
   ]
+  }
 }
