--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "tinacms build && next start",
     "export": "npm run build && next export",
     "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint --fix . --ext .ts,.tsx"
+    "lint:fix": "eslint --fix . --ext .ts,.tsx",
+    "test": "jest --watch"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.3.1",
@@ -37,8 +38,12 @@
   "dependencies": {
     "@headlessui/react": "1.7.5",
     "@tailwindcss/typography": "^0.5.8",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.2",
     "axios": "^1.3.4",
     "date-fns": "^2.23.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-mock-axios": "^4.7.1",
     "next": "^12.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.1",
