--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,10 @@ jobs:
         node: [16]
       steps:
         - uses: actions/checkout@v2
-        - uses: actions/setup-node@v1
+        - name: Use Node.js ${{ matrix.node }}
+          uses: actions/setup-node@v1
           with:
-            node-version: ${{ matrix.node-version }}           
+            node-version: ${{ matrix.node }}           
         - name: Install dependencies
           run: npm ci
         - name: Run eslint
