--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,7 @@ jobs:
           uses: actions/setup-node@v1
           with:
             node-version: ${{ matrix.node }}           
-        - name: Install dependencies
-          run: npm ci
-        - name: Run eslint
-          run: npm run lint
+        - run: |
+          npm ci
+          npm run lint
 
