--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
     "plugin:jsx-a11y/recommended",
     "plugin:import/recommended",
     "plugin:import/errors",
-    "plugin:import/warnings"
+    "plugin:import/warnings",
+    "plugin:import/typescript"
   ],
   "plugins": [
     "react",
