--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "export": "npm run build && next export",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint --fix . --ext .ts,.tsx",
-    "test": "jest --watch"
+    "test": "jest"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.3.1",
