change path for artifact

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           name: env
           path: |
-            /
+            /.env
   
   # create-and-push-docker-image:
   #   name: Create & Push docker image
