--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node Env 
-        uses: actions/setup-node@v2.1.2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
 
@@ -51,13 +51,23 @@ jobs:
     name: Create & Push docker image
     needs: [lint-and-test-app]
 
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-20.04]
+        node: [16]
 
     steps:
 
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Setup Node Env 
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          
       - name: 'Create env file'
         run: |
           touch .env
@@ -119,7 +129,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node Env 
-        uses: actions/setup-node@v2.1.2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
 
