--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,15 +8,8 @@ on:
     branches:
       - main
 
-env:
-  ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-  NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-  NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-  # DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  # DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-
 jobs:
-
+  # Linting and Test code (Eslint and Jest)
   lint-and-test-app:
     name: Lint & Test App
 
@@ -29,25 +22,25 @@ jobs:
 
     steps:
 
-      - name: Checkout Last Branch Commit 
+      - name: Checkout Last Branch Commit 🔍
         uses: actions/checkout@v3
 
-      - name: Setup Node Env 
+      - name: Setup Node Env 🔨
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Install dependencies
+      - name: Install dependencies 💼 
         run: yarn install
 
-      - name: Run eslint
+      - name: Run eslint 👀
         run: yarn lint
 
-      - name: Run Tests
+      - name: Run Tests 🧾
         run: yarn test
    
   create-and-push-docker-image:
-
+     # Create Dcoker image and push on DockerHub
     name: Create & Push docker image
     needs: [lint-and-test-app]
 
@@ -60,18 +53,18 @@ jobs:
 
     steps:
 
-      - name: Checkout repository
+      - name: Checkout repository 🔍
         uses: actions/checkout@v3
 
-      - name: Setup Node Env 
+      - name: Setup Node Env 🔨
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
-          
-      - name: Install yarn
+
+      - name: Install yarn 💊
         run: npm install yarn -g    
 
-      - name: 'Create env file'
+      - name: 'Create env file' ✉
         run: |
           touch .env
           echo REACT_APP_BOT_TOKEN= ${{ secrets.REACT_APP_BOT_TOKEN }} >> .env
@@ -81,19 +74,19 @@ jobs:
           echo REACT_APP_TOKEN= ${{ secrets.REACT_APP_TOKEN }} >> .env
           cat .env
 
-      - name: Set up QEMU
+      - name: Set up QEMU 🖥
         uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
+      - name: Set up Docker Buildx 💿
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to Docker Hub
+      - name: Login to Docker Hub ⚙
         env:
           DOCKER_USERNAME:  ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         
-      - name: Build and push
+      - name: Build and push 💼
         uses: docker/build-push-action@v2
         with:
           # This path is totally independant from the 'file' directve below
@@ -105,7 +98,7 @@ jobs:
 
   build-and-deploy-app:
 
-    name: Build and deploy App to Netlify
+    name: Build and deploy App to Netlify 
     needs: [create-and-push-docker-image]
     
     runs-on: ${{ matrix.os }}
@@ -117,7 +110,7 @@ jobs:
 
     steps:
     
-      - name: 'Create env file'
+      - name: 'Create env file' ✉
         run: |
           touch .env
           echo REACT_APP_BOT_TOKEN= ${{ secrets.REACT_APP_BOT_TOKEN }} >> .env
@@ -128,31 +121,31 @@ jobs:
           cat .env
       
       # Build App
-      - name: Checkout Last Branch Commit 
+      - name: Checkout Last Branch Commit 🔍 
         uses: actions/checkout@v3
 
-      - name: Setup Node Env 
+      - name: Setup Node Env 🔨
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Install dependencies
+      - name: Install dependencies 💼
         run: yarn install
 
-      - name: Build project
+      - name: Build project 🛠
         run: yarn build
 
       # Deploy project to Netlify
-      - name: Deploy to Netlify
+      - name: Deploy to Netlify 🚀
         uses: nwtgck/actions-netlify@v1.2
         with:
           publish-dir: "./next"
           production-branch: main
-          github-token: ${ACCESS_TOKEN}
+          github-token: ${{ secrets.ACCESS_TOKEN }}
           deploy-message: "Deploy from GitHub Actions"
           enable-pull-request-comment: false
           enable-commit-comment: true
           overwrites-pull-request-comment: true
         env:
-          NETLIFY_AUTH_TOKEN: ${NETLIFY_AUTH_TOKEN}
-          NETLIFY_SITE_ID: ${secrets.NETLIFY_SITE_ID}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
