--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,19 +132,11 @@ jobs:
       - name: Build project 🔧
         run: yarn build
       
-      # Create artifact
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          path: |
-            build
-
       # Deploy project to Netlify
       - name: Deploy to Netlify 🚀
         uses: nwtgck/actions-netlify@v1.2
         with:
-          publish-dir: "./build"
+          publish-dir: "./"
           production-branch: main
           github-token: ${{ secrets.ACCESS_TOKEN }}
           deploy-message: "Deploy from GitHub Actions"
