--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,98 +11,98 @@ on:
 jobs:
 
   # Linting and Test code (Eslint and Jest)
-#   lint-and-test-app:
-#     name: Lint & Test App
+  lint-and-test-app:
+    name: Lint & Test App
 
-#     runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
-#     strategy:
-#       matrix:
-#         os: [ubuntu-20.04]
-#         node: [16]
+    strategy:
+      matrix:
+        os: [ubuntu-20.04]
+        node: [16]
 
-#     steps:
+    steps:
 
-#       - name: Checkout Last Branch Commit 🔍
-#         uses: actions/checkout@v3
+      - name: Checkout Last Branch Commit 🔍
+        uses: actions/checkout@v3
 
-#       - name: Setup Node Env 🔨
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: ${{ matrix.node }}
+      - name: Setup Node Env 🔨
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
 
-#       - name: Install dependencies 💼 
-#         run: yarn install
+      - name: Install dependencies 💼 
+        run: yarn install
 
-#       - name: Run eslint 👀
-#         run: yarn lint
+      - name: Run eslint 👀
+        run: yarn lint
 
-#       - name: Run Tests 🧾
-#         run: yarn test
+      - name: Run Tests 🧾
+        run: yarn test
    
-#   create-and-push-docker-image:
+  create-and-push-docker-image:
 
-#     # Create Docker image and push on DockerHub
-#     name: Create & Push docker image
-#     needs: [lint-and-test-app]
+    # Create Docker image and push on DockerHub
+    name: Create & Push docker image
+    needs: [lint-and-test-app]
 
-#     runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
-#     strategy:
-#       matrix:
-#         os: [ubuntu-20.04]
-#         node: [16]
+    strategy:
+      matrix:
+        os: [ubuntu-20.04]
+        node: [16]
 
-#     steps:
+    steps:
 
-#       - name: Checkout repository 🔍
-#         uses: actions/checkout@v3
+      - name: Checkout repository 🔍
+        uses: actions/checkout@v3
 
-#       - name: Setup Node Env 🔨
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: ${{ matrix.node }}
+      - name: Setup Node Env 🔨
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
 
-#       - name: Install yarn 💊
-#         run: npm install yarn -g    
+      - name: Install yarn 💊
+        run: npm install yarn -g    
 
-#       - name: 'Create env file' 
-#         run: |
-#           touch .env
-#           echo REACT_APP_BOT_TOKEN= ${{ secrets.REACT_APP_BOT_TOKEN }} >> .env
-#           echo REACT_APP_CHAT_ID= ${{ secrets.REACT_APP_CHAT_ID }} >> .env
-#           echo REACT_APP_BRANCH= ${{ secrets.REACT_APP_BRANCH }} >> .env
-#           echo REACT_APP_CLIENT_ID= ${{ secrets.REACT_APP_CLIENT_ID }} >> .env
-#           echo REACT_APP_TOKEN= ${{ secrets.REACT_APP_TOKEN }} >> .env
-#           cat .env
+      - name: 'Create env file' 
+        run: |
+          touch .env
+          echo REACT_APP_BOT_TOKEN= ${{ secrets.REACT_APP_BOT_TOKEN }} >> .env
+          echo REACT_APP_CHAT_ID= ${{ secrets.REACT_APP_CHAT_ID }} >> .env
+          echo REACT_APP_BRANCH= ${{ secrets.REACT_APP_BRANCH }} >> .env
+          echo REACT_APP_CLIENT_ID= ${{ secrets.REACT_APP_CLIENT_ID }} >> .env
+          echo REACT_APP_TOKEN= ${{ secrets.REACT_APP_TOKEN }} >> .env
+          cat .env
 
-#       - name: Set up QEMU 🖥
-#         uses: docker/setup-qemu-action@v1
+      - name: Set up QEMU 🖥
+        uses: docker/setup-qemu-action@v1
 
-#       - name: Set up Docker Buildx 💿
-#         uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx 💿
+        uses: docker/setup-buildx-action@v1
 
-#       - name: Login to Docker Hub ⚙
-#         env:
-#           DOCKER_USERNAME:  ${{ secrets.DOCKERHUB_USERNAME }}
-#           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-#         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - name: Login to Docker Hub ⚙
+        env:
+          DOCKER_USERNAME:  ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         
-#       - name: Build and push 💼
-#         uses: docker/build-push-action@v2
-#         with:
-#           # This path is totally independant from the 'file' directve below
-#           context: ./
-#           # This path is totally independant from the 'context' directive above
-#           file: ./Dockerfile
-#           push: true
-#           tags: ${{ secrets.DOCKERHUB_USERNAME }}/tinacms-sto-arm:latest
+      - name: Build and push 💼
+        uses: docker/build-push-action@v2
+        with:
+          # This path is totally independant from the 'file' directve below
+          context: ./
+          # This path is totally independant from the 'context' directive above
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tinacms-sto-arm:latest
 
   build-and-deploy-app:
 
     # Build app with TinaCMS & Next.js and push to Netlify
     name: Build and deploy App to Netlify 
-#     needs: [create-and-push-docker-image]
+    needs: [create-and-push-docker-image]
     
     runs-on: ${{ matrix.os }}
 
@@ -134,15 +134,12 @@ jobs:
 
       - name: Build project 🔧
         run: yarn build
-      
-      - name: ls
-        run: ls
-        
+              
       # Deploy project to Netlify
       - name: Deploy to Netlify 🚀
         uses: nwtgck/actions-netlify@v1.2
         with:
-          publish-dir: "./"
+          publish-dir: "./dist"
           production-branch: main
           github-token: ${{ secrets.ACCESS_TOKEN }}
           deploy-message: "Deploy from GitHub Actions"
