--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -146,10 +146,15 @@ jobs:
               
       # Deploy project to Netlify
       - name: Deploy to Netlify 🚀
-        id: deploy-netlify
-        uses: netlify/actions/cli@master
+        uses: nwtgck/actions-netlify@v1.2
+        with:
+          publish-dir: "./dist"
+          production-branch: main
+          github-token: ${{ secrets.ACCESS_TOKEN }}
+          deploy-message: "Deploy from GitHub Actions"
+          enable-pull-request-comment: false
+          enable-commit-comment: true
+          overwrites-pull-request-comment: true
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        with:
-          args: deploy --dir=dist --prod
