--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest -u"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.33.0",
     "@svgr/webpack": "^6.3.1",
     "@tinacms/cli": "^1.0.9",
     "@types/js-cookie": "^3.0.0",
