--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,4 @@
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+[build]
+  command   = ""
+  functions = "out_functions"
+  publish   = "out_publish"
