--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,16 +131,31 @@ jobs:
 
       - name: Install dependencies 💼
         run: yarn install
-
+             
+      # Using `netlify build` to build the website.
+      # It will run the command specified on `netlify.toml` (`npm run build`)
+      # and use the necessary plugin
       - name: Build project 🔧
-        run: yarn build
-              
-      # Deploy project to Netlify
-      - name: 🚀 Deploy to Netlify
-        id: deploy-netlify
-        uses: netlify/actions/cli@master
+        id: build-netlify
+        run: |
+          netlify build
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        with:
-          args: deploy -m 'v${{ steps.package-version.outputs.current-version}} ・ ${{ github.head_ref }}'
+
+      # Deploys the website to Netlify extracting the deploy metadata.
+      # Adapted from the Netlify Github Action.
+      - name: Production deployment
+        id: deploy-netlify
+        run: |
+          COMMAND="netlify deploy --prod"
+          OUTPUT=$(sh -c "$COMMAND")
+
+          NETLIFY_LOGS_URL=$(echo "$OUTPUT" | grep -Eo '(http|https)://app.netlify.com/[a-zA-Z0-9./?=_-]*') # Unique key: app.netlify.com
+          NETLIFY_LIVE_URL=$(echo "$OUTPUT" | grep -Eo '(http|https)://[a-zA-Z0-9./?=_-]*' | grep -Ev "netlify.com|(--)") # Unique key: doesn't contain -- and app.netlify.com
+
+          echo "::set-output name=netlify_logs_url::$NETLIFY_LOGS_URL"
+          echo "::set-output name=netlify_live_url::$NETLIFY_LIVE_URL"
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
