--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tinacms dev --watchFolders='components/util/icon.tsx' -c \"next dev\"",
     "build": "tinacms build && next build",
-    "postbuild": "next-on-netlify",
+    "docker": "tinacms build && next build",
     "start": "tinacms build && next start",
     "export": "npm run build && next export",
     "lint": "eslint . --ext .ts,.tsx",
@@ -33,6 +33,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "netlify-cli": "^13.2.2",
     "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
     "postcss-nesting": "^10.1.0"
