--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -158,7 +158,7 @@ jobs:
       - name: Production deployment 🚀
         id: deploy-netlify
         run: |
-          COMMAND="netlify deploy --prod"
+          COMMAND="netlify deploy --build --context deploy-preview --prod"
           OUTPUT=$(sh -c "$COMMAND")
 
           NETLIFY_LOGS_URL=$(echo "$OUTPUT" | grep -Eo '(http|https)://app.netlify.com/[a-zA-Z0-9./?=_-]*') # Unique key: app.netlify.com
